--- a/Corona-Warn-App/build.gradle
+++ b/Corona-Warn-App/build.gradle
@@ -88,12 +88,12 @@ android {
         device {
             dimension "version"
             buildConfigField "String", "BUILD_VARIANT", "\"device\""
-            resValue "string", "app_name", "Corona-Warn"
+            resValue "string", "app_name", "CoraLibre"
         }
         deviceForTesters {
             dimension "version"
             buildConfigField "String", "BUILD_VARIANT", "\"deviceForTesters\""
-            resValue "string", "app_name", "CWA TEST"
+            resValue "string", "app_name", "CoraLibre TEST"
             applicationIdSuffix '.dev'
 
             def environmentPropertiesFile = project.rootProject.file('environment.properties')
