App now builds and runs with dependency on CoraLibre sdk (some tasks might still fail on command line build).

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
 rootProject.name = 'Corona-Warn'
 include ':Corona-Warn-App', ':Server-Protocol-Buffer'
+
+includeBuild '../CoraLibre-android-sdk/coralibre-sdk'
